# PideLib

./: .gitignore  README.md  pyproject.toml
pide_lib/: __init__.py  plotly_figs  utils.py
tests/: test_plotly_figs.py  test_utils.py
